Исправление замечаний от "SnurnicynKonstantin"